--- a/CreativeTC/views/project_task.xml
+++ b/CreativeTC/views/project_task.xml
@@ -21,11 +21,13 @@
         </group>
         <group>
             <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}" class="me-2"/>
+            <field name="date_assigned" placeholder="Assigned Date..."/>
         </group>
     </group>
-    <field name="description" type="html" class="oe_description" default_focus="1" options="{'resizable': false, 'collaborative': true}" placeholder="Type Here..."/>
+    <field name="date_assigned" placeholder="Assigned Date..."/>
+    <field name="description" type="html" class="oe_description" default_focus="1" options="{'resizable': false, 'collaborative': true}" placeholder="Type Here Usama..."/>
     
     <!-- ✅ Corrected Date Field -->
-    <field name="date_assigned" placeholder="Assigned Date..."/>
+    
 </sheet>
 <widget name="todo_chatter_panel"/>
