--- a/CreativeTC/views/project_task.xml
+++ b/CreativeTC/views/project_task.xml
@@ -1,12 +1,14 @@
-<record id="view_todo_form_inherit_date_assigned" model="ir.ui.view">
-    <field name="name">todo.form.inherit.date.assigned</field>
-    <field name="model">project.task</field>
-    <field name="inherit_id" ref="your_module_id.view_todo_form"/> 
-    <!-- 👆 replace with the external ID of your To-do form view -->
-    <field name="arch" type="xml">
-        <!-- Insert after Assignees -->
-        <xpath expr="//field[@name='user_ids']" position="after">
-            <field name="date_assigned"/>
-        </xpath>
-    </field>
-</record>
+<odoo>
+    <data>
+        <record id="view_todo_form_inherit_date_assigned" model="ir.ui.view">
+            <field name="name">todo.form.inherit.date.assigned</field>
+            <field name="model">project.task</field>
+            <field name="inherit_id" ref="your_module_id.view_todo_form"/> 
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='user_ids']" position="after">
+                    <field name="date_assigned"/>
+                </xpath>
+            </field>
+        </record>
+    </data>
+</odoo>
