--- a/CreativeTC/views/project_task.xml
+++ b/CreativeTC/views/project_task.xml
@@ -1,14 +1,13 @@
 <odoo>
-    <data>
-        <record id="view_todo_form_inherit_date_assigned" model="ir.ui.view">
-            <field name="name">todo.form.inherit.date.assigned</field>
-            <field name="model">project.task</field>
-            <field name="inherit_id" ref="your_module_id.view_todo_form"/> 
-            <field name="arch" type="xml">
-                <xpath expr="//field[@name='user_ids']" position="after">
-                    <field name="date_assigned"/>
-                </xpath>
-            </field>
-        </record>
-    </data>
+    <record id="view_task_form_inherit_date_assigned" model="ir.ui.view">
+        <field name="name">project.task.form.inherit.date.assigned</field>
+        <field name="model">project.task</field>
+        <field name="inherit_id" ref="project_todo.project_task_view_todo_form"/>
+        <field name="arch" type="xml">
+            <!-- Add the new field after the "user_ids" field -->
+            <xpath expr="//field[@name='user_ids']" position="after">
+                <field name="date_assigned"/>
+            </xpath>
+        </field>
+    </record>
 </odoo>
