--- a/CreativeTC/views/todo_task_views.xml
+++ b/CreativeTC/views/todo_task_views.xml
@@ -1,14 +1,14 @@
 <odoo>
+    <!-- Form view enhancement -->
     <record id="view_todo_task_form_inherit" model="ir.ui.view">
         <field name="name">todo.task.form.inherit</field>
         <field name="model">todo.task</field>
-        <field name="inherit_id" ref="todo.view_todo_task_form"/>
+        <field name="inherit_id" ref="project.view_task_form2"/>
         <field name="arch" type="xml">
+            <xpath expr="//field[@name='user_ids']" position="after">
+                <field name="x_studio_assigned_date"/>
+            </xpath>
             <xpath expr="//sheet/group" position="inside">
-                <group string="Assignment">
-                    <field name="user_ids"/>
-                    <field name="x_studio_assigned_date"/>
-                </group>
                 <group string="Details">
                     <field name="priority"/>
                     <field name="notes"/>
