--- a/CreativeTC/views/todo_task_views.xml
+++ b/CreativeTC/views/todo_task_views.xml
@@ -6,12 +6,12 @@
         <field name="inherit_id" ref="project_todo.project_task_view_todo_form"/>
         <field name="arch" type="xml">
             <!-- Insert assigned date after users -->
-            <xpath expr="//field[@name='user_ids']" position="after">
+            <xpath expr="//field[@name='user_ids']" position="before">
                 <field name="x_studio_assigned_date"/>
             </xpath>
             <!-- Add a new group for priority and notes -->
             <xpath expr="//sheet/group" position="inside">
-                <group string="Details">
+                <group string="Usama-Dinesh">
                     <field name="priority"/>
                     <field name="notes"/>
                 </group>
