--- a/CreativeTC/views/hr_employee_form.xml
+++ b/CreativeTC/views/hr_employee_form.xml
@@ -1,9 +1,8 @@
 <record id="view_employee_form_inherit_attendance" model="ir.ui.view">
     <field name="name">hr.employee.form.attendance</field>
     <field name="model">hr.employee</field>
-    <field name="inherit_id" ref="hr.view_employee_form"/>
+    <field name="inherit_id" ref="hr.view_employee_filter"/>
     <field name="arch" type="xml">
-
         <!-- Example: Add new tab -->
         <notebook position="inside">
             <page string="Attendances">
