--- a/CreativeTC/views/product_template_view.xml
+++ b/CreativeTC/views/product_template_view.xml
@@ -4,7 +4,8 @@
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_only_form_view"/>
         <field name="arch" type="xml">
-            <xpath expr="//sheet/group" position="inside">
+            <!-- <xpath expr="//sheet/group" position="inside"> -->
+            <xpath expr="//sheet/notebook/page[@name='general_information']/group/group" position="inside">
                 <field name="origin_country"/>
             </xpath>
         </field>
