change inherit id

--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -1,7 +1,7 @@
 record id="view_employee_form_inherit_attendance" model="ir.ui.view">
     <field name="name">hr.employee.form.attendance</field>
     <field name="model">hr.employee</field>
-    <field name="inherit_id" ref="hr.view_employee_filter"/>
+    <field name="inherit_id" ref="hr.view_employee_form"/>
     <field name="arch" type="xml">
         <!-- Example: Add new tab -->
         <notebook position="inside">
