--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -7,11 +7,14 @@
             <notebook position="inside">
                 <page string="Attendances">
                     <field name="attendance_ids" context="{'default_employee_id': active_id}">
+                        <!-- tree view for One2many (hr.attendance model) -->
                         <tree editable="bottom">
                             <field name="check_in"/>
                             <field name="check_out"/>
                             <field name="worked_hours"/>
                         </tree>
+
+                        <!-- form view for One2many (hr.attendance model) -->
                         <form>
                             <group>
                                 <field name="check_in"/>
