--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -4,27 +4,24 @@
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
-            <notebook position="inside">
+            <xpath expr="//notebook" position="inside">
                 <page string="Attendances">
                     <field name="attendance_ids" context="{'default_employee_id': active_id}">
-                        <!-- tree view for One2many (hr.attendance model) -->
                         <tree editable="bottom">
                             <field name="check_in"/>
                             <field name="check_out"/>
-                            <field name="worked_hours"/>
+                            <field name="expected_hours"/>
                         </tree>
-
-                        <!-- form view for One2many (hr.attendance model) -->
                         <form>
                             <group>
                                 <field name="check_in"/>
                                 <field name="check_out"/>
-                                <field name="worked_hours"/>
+                                <field name="expected_hours"/>
                             </group>
                         </form>
                     </field>
                 </page>
-            </notebook>
+            </xpath>
         </field>
     </record>
 </odoo>
