--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -8,15 +8,15 @@
                 <page string="Attendances">
                     <field name="attendance_ids" context="{'default_employee_id': active_id}">
                         <tree editable="bottom">
-                            <field name="check_in"/>
-                            <field name="check_out"/>
-                            <field name="expected_hours"/>
+                            <field name="last_check_in"/>
+                            <field name="last_check_out"/>
+                            <!-- <field name="expected_hours"/> -->
                         </tree>
                         <form>
                             <group>
-                                <field name="check_in"/>
-                                <field name="check_out"/>
-                                <field name="expected_hours"/>
+                                <field name="last_check_in"/>
+                                <field name="last_check_out"/>
+                                <!-- <field name="expected_hours"/> -->
                             </group>
                         </form>
                     </field>
