--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -6,17 +6,24 @@
         <field name="arch" type="xml">
             <xpath expr="//notebook" position="inside">
                 <page string="Attendances">
+                    <!-- Show employee-level fields -->
+                    <group>
+                        <field name="last_check_in" readonly="1"/>
+                        <field name="last_check_out" readonly="1"/>
+                    </group>
+
+                    <!-- Show the related attendance records -->
                     <field name="attendance_ids" context="{'default_employee_id': active_id}">
                         <tree editable="bottom">
-                            <field name="last_check_in"/>
-                            <field name="last_check_out"/>
-                            <!-- <field name="expected_hours"/> -->
+                            <field name="check_in"/>
+                            <field name="check_out"/>
+                            <field name="expected_hours"/>
                         </tree>
                         <form>
                             <group>
-                                <field name="last_check_in"/>
-                                <field name="last_check_out"/>
-                                <!-- <field name="expected_hours"/> -->
+                                <field name="check_in"/>
+                                <field name="check_out"/>
+                                <field name="expected_hours"/>
                             </group>
                         </form>
                     </field>
