--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -10,13 +10,13 @@
                         <tree editable="bottom">
                             <field name="last_check_in"/>
                             <field name="last_check_out"/>
-                            <!-- <field name="expected_hours"/> -->
+                            !<-- <field name="expected_hours"/> -->
                         </tree>
                         <form>
                             <group>
                                 <field name="last_check_in"/>
                                 <field name="last_check_out"/>
-                                <!-- <field name="expected_hours"/> -->
+                                !<-- <field name="expected_hours"/> -->
                             </group>
                         </form>
                     </field>
@@ -24,5 +24,5 @@
             </xpath>
         </field>
     </record>
-    
+
 </odoo>
