--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -15,27 +15,15 @@
                     <!-- Show the related attendance records -->
                     <field name="attendance_ids" context="{'default_employee_id': active_id}">
                         <tree editable="bottom">
-<<<<<<< HEAD
-                            <field name="last_check_in"/>
-                            <field name="last_check_out"/>
+                            !<-- <field name="last_check_in"/> -->
+                            !<-- <field name="last_check_out"/> -->
                             !<-- <field name="expected_hours"/> -->
                         </tree>
                         <form>
                             <group>
-                                <field name="last_check_in"/>
-                                <field name="last_check_out"/>
-                                !<-- <field name="expected_hours"/> -->
-=======
-                            <field name="check_in"/>
-                            <field name="check_out"/>
-                            <field name="expected_hours"/>
-                        </tree>
-                        <form>
-                            <group>
-                                <field name="check_in"/>
-                                <field name="check_out"/>
-                                <field name="expected_hours"/>
->>>>>>> e5fd52a04af965ee44602b1d1fc67b96311185a1
+                               !<-- <field name="last_check_in"/>  -->
+                               !<--<field name="last_check_out"/>  -->
+                               !<-- <field name="expected_hours"/> -->
                             </group>
                         </form>
                     </field>
