--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -1,7 +1,7 @@
 <odoo>
     <record id="view_employee_form_inherit_attendance" model="ir.ui.view">
         <field name="name">hr.employee.form.attendance</field>
-        <field name="model">hr.attendance</field>
+        <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
             <xpath expr="//notebook" position="inside">
@@ -13,20 +13,20 @@
                     </group> -->
 
                     <!-- One2many tree/form -->
-                    <field name="attendance_ids" context="{'default_employee_id': active_id}">
+                    <!-- <field name="attendance_ids" context="{'default_employee_id': active_id}"> -->
                         <tree editable="bottom">
-                            <field name="check_in"/>
-                            <field name="check_out"/>
-                            <field name="expected_hours"/>
+                            <field name="last_check_in"/>
+                            <field name="last_check_out"/>
+                            <!-- <field name="expected_hours"/> -->
                         </tree>
                         <form>
                             <group>
-                                <field name="check_in"/>
-                                <field name="check_out"/>
-                                <field name="expected_hours"/>
+                                <field name="last_check_in"/>
+                                <field name="last_check_out"/>
+                                <field name="last_expected_hours"/>
                             </group>
                         </form>
-                    </field>
+                    <!-- </field> -->
                 </page>
             </xpath>
         </field>
