--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -17,7 +17,7 @@
                     <!-- One2many tree/form -->
                     <field name="attendance_ids" context="{'default_employee_id': active_id}">
                         <tree editable="bottom">
-                            <field name="last_check_in"/>
+                            <field name="check_in"/>
                             <field name="check_out"/>
                             <field name="expected_hours"/>
                         </tree>
