--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -1,29 +1,20 @@
 <odoo>
     <record id="view_employee_form_inherit_attendance" model="ir.ui.view">
         <field name="name">hr.employee.form.attendance</field>
-        <field name="model">hr.employee</field>
+        <field name="model">hr.employee</field> <!-- MUST be hr.employee -->
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
             <xpath expr="//notebook" position="inside">
                 <page string="Attendances">
-                    <!-- Optional employee-level info -->
-                    <!--
-                    <group>
-                        <field name="last_check_in" readonly="1"/>
-                        <field name="last_attendance_worked_hours" readonly="1"/>
-                    </group>
-                    -->
-
-                    <!-- One2many tree/form -->
                     <field name="attendance_ids" context="{'default_employee_id': active_id}">
-                        <tree editable="bottom">
+                        <tree>
                             <field name="check_in"/>
                             <field name="check_out"/>
                             <field name="expected_hours"/>
                         </tree>
                         <form>
                             <group>
-                                <field name="last_check_in"/>
+                                <field name="check_in"/>
                                 <field name="check_out"/>
                                 <field name="expected_hours"/>
                             </group>
