--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -12,23 +12,24 @@
                         <field name="last_check_in" readonly="1"/>
                         <field name="last_attendance_worked_hours" readonly="1"/>
                     </group>
-                    -->
-                    <!-- One2many tree/form -->
+                   
                     <field name="attendance_ids" context="{'default_employee_id': active_id}">
                         <tree editable="bottom">
-                            <field name="check_in"/>
-                            <field name="check_out"/>
+                            <field name="last_check_in"/>
+                            <field name="expected_hours"/>
                           </tree>
                         <form>
                             <group>
                                 <field name="last_check_in"/>
-                                <field name="check_out"/>
+                                <field name="expected_hours"/>
                               </group>
                         </form>
+                         -->
+                    <!-- One2many tree/form -->
                     </field>
                 </page>
             </xpath>
         </field>
     </record>
-    
+
 </odoo>
