--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -1,7 +1,7 @@
 <odoo>
     <record id="view_employee_form_inherit_attendance" model="ir.ui.view">
         <field name="name">hr.employee.form.attendance</field>
-        <field name="model">hr.employee</field> <!-- MUST be hr.employee -->
+        <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
             <xpath expr="//notebook" position="inside">
@@ -17,19 +17,18 @@
                         <tree editable="bottom">
                             <field name="last_check_in"/>
                             <field name="expected_hours"/>
-                          </tree>
+                        </tree>
                         <form>
                             <group>
                                 <field name="last_check_in"/>
                                 <field name="expected_hours"/>
-                              </group>
+                            </group>
                         </form>
-                         -->
-                    <!-- One2many tree/form -->
                     </field>
+                    -->
+                    <!-- One2many tree/form -->
                 </page>
             </xpath>
         </field>
     </record>
-
 </odoo>
