--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -5,28 +5,19 @@
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
             <xpath expr="//notebook" position="inside">
-                <page string="Attendances">
-                    <!-- Optional employee-level info -->
-                    <!--
-                    <group>
-                        <field name="last_check_in" readonly="1"/>
-                        <field name="last_attendance_worked_hours" readonly="1"/>
-                    </group>
-                   
-                    <field name="attendance_ids" context="{'default_employee_id': active_id}">
+                <page string="Attendance">
+                    <field name="attendance_ids">
                         <tree editable="bottom">
-                            <field name="last_check_in"/>
-                            <field name="expected_hours"/>
+                            <field name="check_in"/>
+                            <field name="check_out"/>
                         </tree>
                         <form>
                             <group>
-                                <field name="last_check_in"/>
-                                <field name="expected_hours"/>
+                                <field name="check_in"/>
+                                <field name="check_out"/>
                             </group>
                         </form>
                     </field>
-                    -->
-                    <!-- One2many tree/form -->
                 </page>
             </xpath>
         </field>
