--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -1,31 +1,5 @@
 <odoo>
-    <!-- 1. Define Tree View for Attendance inside Employee -->
-    <record id="view_attendance_tree_in_employee" model="ir.ui.view">
-        <field name="name">hr.attendance.tree.in.employee</field>
-        <field name="model">hr.attendance</field>
-        <field name="arch" type="xml">
-            <tree editable="bottom">
-                <field name="check_in"/>
-                <field name="check_out"/>
-            </tree>
-        </field>
-    </record>
-
-    <!-- 2. Define Form View for Attendance inside Employee -->
-    <record id="view_attendance_form_in_employee" model="ir.ui.view">
-        <field name="name">hr.attendance.form.in.employee</field>
-        <field name="model">hr.attendance</field>
-        <field name="arch" type="xml">
-            <form>
-                <group>
-                    <field name="check_in"/>
-                    <field name="check_out"/>
-                </group>
-            </form>
-        </field>
-    </record>
-
-    <!-- 3. Extend Employee Form to Show Attendance Tab -->
+    <!-- Extend Employee Form to Show Attendance Tab -->
     <record id="view_employee_form_inherit_attendance" model="ir.ui.view">
         <field name="name">hr.employee.form.attendance</field>
         <field name="model">hr.employee</field>
@@ -33,9 +7,21 @@
         <field name="arch" type="xml">
             <xpath expr="//notebook" position="inside">
                 <page string="Attendance">
-                    <field name="attendance_ids" mode="tree,form"
-                           views="[(ref('your_module.view_attendance_tree_in_employee'), 'tree'),
-                                   (ref('your_module.view_attendance_form_in_employee'), 'form')]"/>
+                    <!-- One2many wrapper -->
+                    <field name="attendance_ids">
+                        <!-- Tree view for attendance records -->
+                        <tree editable="bottom">
+                            <field name="check_in"/>
+                            <field name="check_out"/>
+                        </tree>
+                        <!-- Form view for individual attendance record -->
+                        <form>
+                            <group>
+                                <field name="check_in"/>
+                                <field name="check_out"/>
+                            </group>
+                        </form>
+                    </field>
                 </page>
             </xpath>
         </field>
