--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -12,7 +12,8 @@
                         </tree>
                         <form>
                             <group>
-
+                                <field name="check_in"/>
+                                <field name="check_out"/>
                             </group>
                         </form>
                     </field>
