--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -8,12 +8,13 @@
                 <page string="Attendance">
                     <field name="attendance_ids" widget="section_and_content">
                         <tree editable="bottom">
-                            <field name="check_in"/>
-                            <field name="check_out"/>   
+                            <field name="check_in" widget="datetime"/>
+                            <field name="check_out" widget="datetime"/>   
                         </tree>
                         <form>
                             <group>
-
+                            <field name="check_in" widget="datetime"/>
+                            <field name="check_out" widget="datetime"/>   
                             </group>
                         </form>
                     </field>
