--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -5,14 +5,16 @@
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
             <xpath expr="//notebook" position="inside">
-                <page string="Attendance">
+             <page string="Attendance">
                     <field name="attendance_ids" widget="section_and_content">
                         <tree editable="bottom">
-                            <field name="employee_id" />
+                            <field name="check_in"/>
+                            <field name="check_out"/>
                         </tree>
                         <form>
                             <group>
-                            <field name="employee_id" / >
+                                <field name="check_in"/>
+                                <field name="check_out"/>
                             </group>
                         </form>
                     </field>
