--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -6,7 +6,7 @@
         <field name="arch" type="xml">
             <xpath expr="//notebook" position="inside">
              <page string="Attendance">
-                    <field name="attendance_ids" widget="section_and_content">
+                    <field name="attendance_ids" context="{'default_employee_id': active_id}">
                         <tree editable="bottom">
                             <field name="check_in"/>
                             <field name="check_out"/>
