--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -8,13 +8,13 @@
              <page string="Attendance">
                     <field name="attendance_ids" context="{'default_employee_id': active_id}">
                         <tree editable="bottom">
-                            <field name="check_in">
-                            <field name="check_out">
+                            <field name="check_in"/>
+                            <field name="check_out"/>
                         </tree>
                         <form>
                             <group>
-                                <field name="check_in">
-                                <field name="check_out">
+                                <field name="check_in"/>
+                                <field name="check_out"/>
                             </group>
                         </form>
                     </field>
