--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -1,24 +1,17 @@
 <odoo>
-    <record id="view_employee_form_inherit_attendance" model="ir.ui.view">
-        <field name="name">hr.employee.form.attendance.minimal</field>
+    <record id="view_employee_form_inherit" model="ir.ui.view">
+        <field name="name">hr.employee.form.inherit</field>
         <field name="model">hr.employee</field>
-        <field name="inherit_id" ref="hr.view_employee_form"/>
+        <field name="inherit_id" ref="hr.view_employee_form" />
         <field name="arch" type="xml">
-            <xpath expr="//notebook" position="inside">
-             <page string="Attendance">
-                    <field name="attendance_ids" context="{'default_employee_id': active_id}">
+            <xpath expr="//sheet" position="inside">
+                <group string="Foreign Table">
+                    <field name="foreign_table_ids">
                         <tree editable="bottom">
-                            <field name="check_in"/>
-                            <field name="check_out"/>
+                            <field name="name" />
                         </tree>
-                        <form>
-                            <group>
-                                <field name="check_in"/>
-                                <field name="check_out"/>
-                            </group>
-                        </form>
                     </field>
-                </page>
+                </group>
             </xpath>
         </field>
     </record>
