--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -5,10 +5,10 @@
         <field name="inherit_id" ref="hr.view_employee_form" />
         <field name="arch" type="xml">
             <xpath expr="//sheet" position="inside">
-                <group string="Foreign Table">
-                    <field name="foreign_table_ids">
+                <group string="hr.attendance">
+                    <field name="attendance_ids">
                         <tree editable="bottom">
-                            <field name="name" />
+                            <field name="check_in" />
                         </tree>
                     </field>
                 </group>
