--- a/CreativeTC/views/hr_employee_view.xml
+++ b/CreativeTC/views/hr_employee_view.xml
@@ -4,9 +4,16 @@
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
+
             <!-- Find the <field name="name"/> in Employee form and put our field after it -->
             <xpath expr="//field[@name='job_title']" position="after">
-            <field name="test_field" placeholder="Enter your test value here..."/>
+            <field name="test_field" placeholder="Test:- Enter your preferred location here..."/>
+
+            <!-- Put both fields just below Job Position -->
+            <xpath expr="//field[@name='job_title']" position="after">
+                <field name="joining_date" placeholder="Select joining date"/>
+                <field name="experience_years" readonly="1"/>
+
             </xpath>
         </field>
     </record>
