--- a/CreativeTC/views/hr_employee_view.xml
+++ b/CreativeTC/views/hr_employee_view.xml
@@ -8,6 +8,7 @@
             <!-- Find the <field name="name"/> in Employee form and put our field after it -->
             <xpath expr="//field[@name='job_title']" position="after">
             <field name="test_field" placeholder="Test:- Enter your preferred location here..."/>
+            </xpath>
 
             <!-- Put both fields just below Job Position -->
             <xpath expr="//field[@name='job_title']" position="after">
