--- a/CreativeTC/views/hr_employee_view.xml
+++ b/CreativeTC/views/hr_employee_view.xml
@@ -13,7 +13,7 @@
             <!-- Put both fields just below Job Position -->
             <xpath expr="//field[@name='job_title']" position="after">
                 <field name="joining_date" placeholder="Select joining date"/>
-                <field name="experience_years" readonly="1"/>
+                <field name="experience_text" readonly="1"/>
 
             </xpath>
         </field>
