--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -6,7 +6,7 @@
         <field name="arch" type="xml">
             <xpath expr="//notebook" position="inside">
                 <page string="Attendance">
-                    <field name="attendance_ids">
+                    <field name="attendance_ids" widget="one2many_list">
                         <tree editable="bottom">
                             <field name="check_in"/>
                             <field name="check_out"/>
