--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -8,7 +8,7 @@
                 <page string="Daily Attendance">
                     <field name="attendance_line_ids" nolabel="1">
                         <tree editable="false">
-                            <field name="date"/>
+                            <!-- <field name="date"/> -->
                             <field name="check_in"/>
                             <field name="check_out"/>
                             <field name="status"/>
